--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
+    "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
+    "cookies": "^0.9.1",
     "dotenv": "^16.4.1",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/cookies": "^0.9.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
     "@types/react": "^18",
