--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
+    "@vercel/speed-insights": "^1.0.9",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
