--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
+    "@types/react-toastify": "^4.1.0",
     "@vercel/speed-insights": "^1.0.9",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
@@ -22,6 +23,7 @@
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
   },
