--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
